# dafu

./: .gitignore  API_SETUP_COMPLETE.md  CLI_IMPLEMENTATION.md  CLI_QUICK_START.md  CLI_USAGE.md  DAFU_CLI_DEMO.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_STATUS.md  DOCS_ENGLISH_FINAL.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STRUCTURE.md  ENGLISH_DOCS_UPDATE_SUMMARY.md  FINAL_SUMMARY.md  HOW_TO_USE_CLI.md  LICENSE  Makefile  QUICK_START.md  README.md  RESULTS_PATH_UPDATE.md  SETUP_COMPLETE_REPORT.md  TESTED_QUICK_START.md  TEST_SUCCESS.md  dafu  docker-compose.yml  pyproject.toml  setup.py  start.sh  test_cli.sh
.cursor/rules/: fraud-detection-and-ecommerce-analytics.mdc
.github/ISSUE_TEMPLATE/: api_issue.yml  bug_report.yml  config.yml  deployment_issue.yml  feature_request.yml  ml_model_issue.yml  question.yml
dafu_cli/: __init__.py  cli.py
docs/: CLI_STEP_BY_STEP.md  QUICK_START_API.md  README.md  USAGE_GUIDE.md
docs/.cache/: template.html
docs/api/: API_USAGE_GUIDE.md  README.md
docs/cli/: CLI_USAGE_COMPLETE.md  DAFU_CLI_GUIDE.md  DAFU_CLI_INTEGRATED.md  README.md
docs/docker/: DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_README.md  DOCKER_SETUP.md
docs/guides/: IMPLEMENTATION_COMPLETE.md  QUICK_START.md
fraud_detection/: .gitignore  .pre-commit-config.yaml  .pylintrc  API_README.md  MODEL_PERSISTENCE_README.md  README.md  USAGE_EXAMPLES.md  __init__.py  cli_login.sh  example_usage.py  install.sh  requirements-minimal.txt  requirements.txt  start_api.sh  test_anomaly_detection.py  test_anomaly_detection_fix.py  test_emoji_only.py  test_final_fix.py  test_interactive_anomaly.py  test_lstm_gru.py  test_real_interactive.py  test_sequence_models_fix.py  test_sequence_models_interactive.py  test_visualization_fixes.py
fraud_detection/deployment/: Dockerfile  entrypoint.sh  grafana-datasources.yml  init-db.sql  prometheus.yml
fraud_detection/good/: valid_sample.py
fraud_detection/src/: __init__.py
web/: DEPLOYMENT.md  README.md  next.config.ts  package-lock.json  package.json
web/app/: data.json  globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts  tickets.json
web/public/: robots.txt
(+31 files in other folders)
